Update SEC EDGAR Income Statement.ipynb

--- a/SEC EDGAR Income Statement.ipynb
+++ b/SEC EDGAR Income Statement.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "# Need to specify email to access API\n",
-    "header={'User-Agent': \"chasenb1@gmail.com\"}"
+    "header={'User-Agent': \"XXXXX\"}"
    ]
   },
   {
